feat: update meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta property="og:image" content="https://www.mabow.com.tw/uploads/8/5/0/5/85050752/logo.png" />
+  <meta property="og:title" content=""/>
+  <meta property="og:description" content="" />
   <title>MabowShare</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
