--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta property="og:image" content="https://www.mabow.com.tw/uploads/8/5/0/5/85050752/logo.png" />
+  <meta property="og:image" content="" />
   <meta property="og:title" content=""/>
   <meta property="og:description" content="" />
   <title>MabowShare</title>
